# model/organization.go
@@ -3,11 +3,11 @@ package model
 import "time"
 
 type Organization struct {
-	ID      string `gorm:"primaryKey"`
-	Name    string `json:"name"`
-	Address string `json:"address"`
-	Phone   string `json:"phone"`
-
+	ID        string    `gorm:"primaryKey"`
+	Name      string    `json:"name"`
+	Address   string    `json:"address"`
+	Phone     string    `json:"phone"`
+	Status    string    `json:"status"`
 	UpdatedBy string    `json:"updated_by"`
 	UpdatedAt time.Time `json:"updated_at"`
 	CreatedBy string    `json:"created_by"`
